--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Webstack.cc" />
-    <meta name="author" content="viggoz.com" />
-    <title>Webstack.cc - Admin</title>
+    <meta name="description" content="www.vnnsoo.com" />
+    <meta name="author" content="VNNSOO" />
+    <title>VNNSOO - Admin</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="assets/css/fonts/linecons/css/linecons.css">
     <link rel="stylesheet" href="assets/css/fonts/fontawesome/css/font-awesome.min.css">
