--- a/cn/about.html
+++ b/cn/about.html
@@ -64,9 +64,9 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <blockquote>
-                                        <p>有一段时间我发现我的收藏夹越来越多，很难找到某个不常用的网站。所以就有了这个网站，这里收集的基本都是我自己浏览器收藏夹里的网站，我平时用的相对比较多的一些都在这里。</p>
+                                        <p>这个网站是一个主要用于收藏一些常用的站点而建立的，方便记录，你可以将你喜欢的站点存储在这个站点以方便快速的浏览查看</p>
                                         </br>
-                                        <p>如果你也是设计师，如果你也正好喜欢设计，那希望这个网站能给你带来一些作用。</p>
+                                        <p>如果你有其他的想法，可以留言给我，我们可以对他进行一些改善</p>
                                     </blockquote>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                             <h4 class="text-gray">关于站长</h4>
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.viggoz.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.viggoz.com/">
+                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.vnnsoo.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.vnnsoo.com/">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
                                                 <img src="../assets/images/logos/viggoz.png" class="img-circle" width="40">
@@ -94,7 +94,7 @@
                                             <br />
                                             <blockquote>
                                                 <p>
-                                                    这是一个公益项目，而且是<a href="https://geekyouth.github.io/static-website-demo"> 开源 </a>的。你也可以拿来制作自己的网址导航。如果你有更好的想法，可以通过个人网站<a href="http://www.viggoz.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">viggoz.com</span></a>中的联系方式找到我，欢迎与我交流分享。
+                                                    这是一个开放的站点，而且是<a href="https://geekyouth.github.io/static-website-demo"> 开源 </a>的。你也可以拿来制作自己的网址导航。如果你有更好的想法，可以通过个人网站<a href="http://www.vnnsoo.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">vnnsoo.com</span></a>中的联系方式找到我，欢迎与我交流分享。
                                                 </p>
                                             </blockquote>
                                         </div>
