--- a/cn/about.html
+++ b/cn/about.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="DesignStack" />
     <meta name="author" content="viggo" />
-    <title>WebStack.cc - 设计师网址导航</title>
+    <title>vnnsoo.com - System</title>
     <meta name="keywords" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
     <meta name="description" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
-    <link rel="shortcut icon" href="../assets/images/favicon.png">
+    <link rel="shortcut icon" href="../assets/images/vnnsooqqq.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="../assets/css/fonts/linecons/css/linecons.css">
     <link rel="stylesheet" href="../assets/css/fonts/fontawesome/css/font-awesome.min.css">
@@ -27,16 +27,16 @@
     <![endif]-->
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://www.webstack.cc/">
+    <meta property="og:url" content="http://www.vnnsoo.com/">
     <meta property="og:title" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <meta property="og:description" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
-    <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta property="og:image" content="http://www.vnnsoo.com/assets/images/vnnsooqqq.png">
     <meta property="og:site_name" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <meta name="twitter:description" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
-    <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta name="twitter:image" content="http://www.vnnsoo.com/assets/images/vnnsooqqq.png">
 </head>
 
 <body class="page-body boxed-container">
@@ -77,13 +77,13 @@
                                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.vnnsoo.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.vnnsoo.com/">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
-                                                <img src="../assets/images/logos/viggoz.png" class="img-circle" width="40">
+                                                <img src="../assets/images/logos/tinypng.png" class="img-circle" width="40">
                                             </a>
                                             <div class="xe-comment">
                                                 <a href="#" class="xe-user-name overflowClip_1">
-                                                    <strong>Designer. Viggo.</strong>
+                                                    <strong>Designer. Vic.</strong>
                                                 </a>
-                                                <p class="overflowClip_2"> Full-time UI designer with an enduring interest in Coding.</p>
+                                                <p class="overflowClip_2"> Full-time System</p>
                                             </div>
                                         </div>
                                     </div>
@@ -114,8 +114,8 @@
             <footer class="main-footer sticky footer-type-1 fixed">
                 <div class="footer-inner">
                     <div class="footer-text">
-                        &copy; 2017 - 2018
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a>
+                        &copy; 2020 - 2021
+                        <a href="../cn/about.html"><strong>VNNSOO</strong></a> design by <a href="http://www.vnnsoo.com" target="_blank"><strong>Vic</strong></a>
                     </div>
                     <div class="go-up">
                         <a href="#" rel="go-top">
