--- a/en/about.html
+++ b/en/about.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="DesignStack" />
-    <meta name="author" content="viggo" />
+    <meta name="author" content="Vic" />
     <title>WebStack.cc - SYSTEM</title>
     <meta name="keywords" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
     <meta name="description" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
-    <link rel="shortcut icon" href="../assets/images/favicon.png">
+    <link rel="shortcut icon" href="../assets/images/vnnsooqqq.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="../assets/css/fonts/linecons/css/linecons.css">
     <link rel="stylesheet" href="../assets/css/fonts/fontawesome/css/font-awesome.min.css">
@@ -27,7 +27,7 @@
     <![endif]-->
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://www.webstack.cc/">
+    <meta property="og:url" content="http://www.vnnsoo.com/">
     <meta property="og:title" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <meta property="og:description" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
     <meta property="og:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <meta name="twitter:description" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
-    <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta name="twitter:image" content="http://www.vnnsoo.com/assets/images/vnnsooqqq.png">
 </head>
 
 <body class="page-body boxed-container">
