--- a/cn/index.html
+++ b/cn/index.html
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="DesignStack" />
-<meta name="author" content="Vic" />
-    <title>WebStack.cc - SYSTEM</title>
+    <meta name="author" content="Vic" />
+    <title>www.vnnsoo.com - SYSTEM</title>
     <meta name="keywords" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
     <meta name="description" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <link rel="shortcut icon" href="../assets/images/vnnsooqqq.png">
@@ -265,14 +265,14 @@
                         </a>
                     </li>
                     <div class="submit-tag">
-                        <a href="about.html">
+                        <a href="vnncy.html">
                             <i class="linecons-heart"></i>
                             <span class="tooltip-blue">关于本站</span>
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
                         </a>
                     </div>
                     <div class="submit-tag">
-                        <a href="about.html">
+                        <a href="vnncy.html">
                             <i class="linecons-heart"></i>
                             <span class="tooltip-blue">留言板</span>
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
