--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     });
     </script>
     <meta charset="UTF-8">
-    <title>Vnnsoo.com - System 网址导航</title>
+    <title>vnnsoo.com - System 网址导航</title>
     <script>
     if (navigator.appName == "Netscape") {
         var language = navigator.language;
@@ -33,8 +33,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="DesignStack" />
-<meta name="author" content="Vic" />
-    <title>WebStack.cc - SYSTEM</title>
+    <meta name="author" content="Vic" />
+    <title>www.vnnsoo.com - SYSTEM</title>
     <meta name="keywords" content="网络、系统、云计算、信息化、大数据、分布式、IT资源、IT建站、Azure、阿里云、腾讯云、华为云、站点开发、数据维护、存储、VPN、数据库">
     <meta name="description" content="VNNSOO - 分享系统集成、IT信息、云计算、站点开发、数据维护全面信息标签。www.vnnsoo.com">
     <link rel="shortcut icon" href="../assets/images/vnnsooqqq.png">
