--- a/cn/index.html
+++ b/cn/index.html
@@ -259,9 +259,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#留言板" class="smooth">
+                        <a href="#Vnncy Home" class="smooth">
                             <i class="linecons-user"></i>
-                            <span class="title">留言板</span>
+                            <span class="title">Vnncy Home</span>
                         </a>
                     </li>
                     <div class="submit-tag">
@@ -274,7 +274,7 @@
                     <div class="submit-tag">
                         <a href="vnncy.html">
                             <i class="linecons-heart"></i>
-                            <span class="tooltip-blue">留言板</span>
+                            <span class="tooltip-blue">Vnncy Home</span>
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
                         </a>
                     </div>
@@ -4055,10 +4055,10 @@
             </div>
             <br />
             <!--END UED团队 -->
-            <!-- 留言板 -->
-            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="留言板"></i>留言板</h4>
+            <!-- Vnncy Home -->
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="Vnncy Home"></i>Vnncy Home</h4>
             <br />
-            <!--END 留言板 -->
+            <!--END Vnncy Home -->
             <!-- Main Footer -->
             <!-- Choose between footer styles: "footer-type-1" or "footer-type-2" -->
             <!-- Add class "sticky" to  always stick the footer to the end of page (if page contents is small) -->
