--- a/cn/index.html
+++ b/cn/index.html
@@ -273,6 +273,13 @@
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
                         </a>
                     </div>
+                    <div class="submit-tag">
+                        <a href="..\system\system.html">
+                            <i class="linecons-heart"></i>
+                            <span class="tooltip-blue">System Tring</span>
+                            <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
+                        </a>
+                    </div>					
                 </ul>
             </div>
         </div>
