--- a/cn/index.html
+++ b/cn/index.html
@@ -276,7 +276,7 @@
                     <div class="submit-tag">
                         <a href="..\cn\system.html">
                             <i class="linecons-heart"></i>
-                            <span class="tooltip-blue">System Tring</span>
+                            <span class="tooltip-blue">System Training</span>
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
                         </a>
                     </div>					
