--- a/cn/index.html
+++ b/cn/index.html
@@ -274,7 +274,7 @@
                         </a>
                     </div>
                     <div class="submit-tag">
-                        <a href="..\cn\system.html">
+                        <a href="system.html">
                             <i class="linecons-heart"></i>
                             <span class="tooltip-blue">System Training</span>
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
