--- a/cn/index.html
+++ b/cn/index.html
@@ -279,6 +279,18 @@
                             <span class="tooltip-blue">System Training</span>
                             <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
                         </a>
+                        <ul>
+                            <li>
+                                <a href="#设计规范" class="smooth">
+                                    <span class="title"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#视频教程" class="smooth">
+                                    <span class="title">视频教程</span>
+                                </a>
+                            </li>
+						</ul>
                     </div>					
                 </ul>
             </div>
