--- a/cn/index.html
+++ b/cn/index.html
@@ -247,6 +247,40 @@
                             </li>
                         </ul>
                     </li>
+					<li>
+                        <a>
+                            <i class="linecons-system"></i>
+                            <span class="title">System</span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="#设计规范" class="smooth">
+                                    <span class="title">设计规范</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#视频教程" class="smooth">
+                                    <span class="title">视频教程</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#设计文章" class="smooth">
+                                    <span class="title">设计文章</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#设计电台" class="smooth">
+                                    <span class="title">设计电台</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#交互设计" class="smooth">
+                                    <span class="title">交互设计</span>
+                                    <span class="label label-pink pull-right hidden-collapsed">Hot</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="#UED团队" class="smooth">
                             <i class="linecons-user"></i>
