--- a/map/map.html
+++ b/map/map.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <title>获取定位</title>
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=zgNtX9ZLiYMntFeFb3cYmzP1GQGgr9O8"></script>
+<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=zgNtX9ZLiYMntFeFb3cYmzP1GQGgr9O8"></script>
 <style type="text/css">
 body{font-size:13px;margin:0px}
 #container{width:600px;height:400px}
