--- a/map/map.html
+++ b/map/map.html
@@ -30,7 +30,7 @@ body{font-size:13px;margin:0px}
         </div>
       
       </div>
-<!-- <div id="searchResultPanel" style="border:1px solid #C0C0C0;width:300px;height:600px;position:absolute;left: 650px;top:20px;"></div> -->
+<div id="searchResultPanel" style="border:1px solid #C0C0C0;width:40px;height:50px;position:absolute;left: 650px;top:20px;"></div>
  
 <div id="container"></div>
 <script type="text/javascript">
