--- a/map/map.html
+++ b/map/map.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -30,7 +30,7 @@ body{font-size:13px;margin:0px}
         </div>
       
       </div>
-<div id="searchResultPanel" style="border:1px solid #C0C0C0;width:300px;height:600px;position:absolute;left: 650px;top:20px;"></div>
+<div id="searchResultPanel" style="border:2px solid #C0C0C0;width:300px;height:100px;position:absolute;left:5px;top:580px;"></div>
  
 <div id="container"></div>
 <script type="text/javascript">
